Bug 30477. Deal with the fact that somehow mSource is getting set to null. Bogo-defensive programming. Yay! r=warren, a=gramps, leaf.